# robbie

./: .gitignore  README.md  environment.yml  main.cpp  meson.build  pixi.toml  run_formatter.sh
.github/workflows/: ci.yml
bindings/: binding.cpp
examples/mnist/: get_mnist.sh  main.cpp  mnist_loader.cpp  mnist_loader.h  mnist_reader_common.hpp  mnist_reader_less.hpp
examples/python/: run.py
include/: activation_functions.hpp  activation_layer.hpp  add.hpp  defines.hpp  dropout_layer.hpp  fc_layer.hpp  io.hpp  layer.hpp  loss_functions.hpp  network.hpp  optimizer.hpp  optimizers.hpp  robbie.hpp  stochastic_gradient_descent.hpp  util.hpp
test/: test1.cpp  test_activation_functions.cpp  test_backward_propagations.cpp  test_fc_layer.cpp  test_loss_functions.cpp  test_xor.cpp
